--- a/admin.html
+++ b/admin.html
@@ -16,10 +16,10 @@
 
         <header>
             <div id="logo">
-                <a href="/index.html">
-                    <svg id="logo-nike" viewBox="0 0 24 24" width="48px" height="48px">
+                <a href="/index copy.html">
+                    <svg id="logo-nike" viewBox="0 0 20 20" width="60px" height="60px">
                         <path
-                            d="M21 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z">
+                            d="M1.354 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z">
                         </path>
                     </svg>
                 </a>
@@ -41,7 +41,7 @@
                         <a href="#">
                             <i class="fa-solid fa-list-check icon-nav"></i>Items Manager
                         </a>
-                        
+
                         <ul class="subnav">
                             <li><a href="#">Clothings</a></li>
                             <li><a href="#">Shoes</a></li>
@@ -95,42 +95,42 @@
                         <div class="item-icon"><i class="fa-solid fa-dollar-sign"></i></div>
                         <div class="item-describe">
                             <label class="item-title">Total icome</label>
-                            <p class="item-value">1101010103</p>                            
+                            <p class="item-value">1101010103</p>
                         </div>
                     </div>
                     <div class="statistic-item">
                         <div class="item-icon"><i class="fa-solid fa-cart-shopping"></i></div>
                         <div class="item-describe">
                             <label class="item-title">Items sold</label>
-                            <p class="item-value">10474612</p>                            
+                            <p class="item-value">10474612</p>
                         </div>
                     </div>
                     <div class="statistic-item">
                         <div class="item-icon"><i class="fa-solid fa-users"></i></div>
                         <div class="item-describe">
                             <label class="item-title">Total users</label>
-                            <p class="item-value">10123</p>                            
+                            <p class="item-value">10123</p>
                         </div>
                     </div>
                     <div class="statistic-item">
                         <div class="item-icon"><i class="fa-solid fa-chart-line"></i></div>
                         <div class="item-describe">
                             <label class="item-title">Monthly icome</label>
-                            <p class="item-value">51230123</p>                            
+                            <p class="item-value">51230123</p>
                         </div>
                     </div>
                     <div class="statistic-item">
                         <div class="item-icon"><i class="fa-solid fa-heart"></i></div>
                         <div class="item-describe">
                             <label class="item-title">Total favorite</label>
-                            <p class="item-value">69287</p>                            
+                            <p class="item-value">69287</p>
                         </div>
                     </div>
                     <div class="statistic-item">
                         <div class="item-icon"><i class="fa-solid fa-star"></i></div>
                         <div class="item-describe">
                             <label class="item-title">Total saves</label>
-                            <p class="item-value">2134</p>                            
+                            <p class="item-value">2134</p>
                         </div>
                     </div>
                 </div>
