--- a/product-pages/kid-shoes.html
+++ b/product-pages/kid-shoes.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/product-pages.css">
-    <title>Kid's Shoes</title>
+    <title>Our Happy Clients</title>
 </head>
 
 
@@ -21,7 +21,7 @@
                     <ul>
                         <li><a target="_blank"
                                 href="https://www.google.com/maps/search/Nike/@10.7865558,106.62541,13z/data=!3m1!4b1">
-                                Find a store
+                                Địa chỉ
                             </a></li>
                         <li>| <a href="../sign-in.html" id="sign-in">Sign In</a></li>
                         <li>| <a href="../sign-up.html" id="sign-up">Sign Up</a></li>
@@ -31,10 +31,10 @@
             <nav>
                 <div class="header-nav">
                     <div id="logo">
-                        <a href="../index.html">
-                            <svg id="logo-nike" viewBox="0 0 24 24" width="60px" height="60px">
+                        <a href="/index copy.html">
+                            <svg id="logo-nike" viewBox="0 0 20 20" width="60px" height="60px">
                                 <path
-                                    d="M21 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z">
+                                    d="M1.354 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z">
                                 </path>
                             </svg>
                         </a>
@@ -42,92 +42,60 @@
                     <nav>
                         <ul id="nav">
                             <li class="nav-item">
-                                <a class="nav-item-title" href="../index.html"
-                                    rel="noopener noreferrer">Home</a>
+                                <a class="nav-item-title" href="./index copy.html" rel="noopener noreferrer">Home</a>
                                 <div class="sub-nav-box">
                                     <ul class="sub-nav">
                                         <li class="sub-nav-item">
                                             <ul>
-                                                <a class="sub-nav-title" href="../index.html">New & Featured</a>
-                                                <li><a href="./kid-shoes.html">Latest Shoes</a></li>
-                                                <li><a href="./women-clothing.html">Latest Clothing</a>
-                                                </li>
+
                                             </ul>
                                         </li>
                                         <li class="sub-nav-item">
                                             <ul>
-                                                <a class="sub-nav-title" href="./men-clothing.html">New
-                                                    For
-                                                    Men</a>
-                                                <li><a href="./men-shoes.html">Shoes</a></li>
-                                                <li><a href="./men-clothing.html">Clothing</a></li>
+
                                             </ul>
                                         </li>
                                         <li class="sub-nav-item">
                                             <ul>
-                                                <a class="sub-nav-title" href="./women-clothing.html">New
-                                                    For
-                                                    Women</a>
-                                                <li><a href="./women-shoes.html">Shoes</a></li>
-                                                <li><a href="./women-clothing.html">Clothing</a></li>
+
                                             </ul>
                                         </li>
                                         <li class="sub-nav-item">
                                             <ul>
-                                                <a class="sub-nav-title" href="./kid-clothing.html">New
-                                                    For
-                                                    Kids</a>
-                                                <<li><a href="./kid-shoes.html">Shoes</a>
+
                                         </li>
-                                        <li><a href="./kid-clothing.html">Clothing</a></li>
+
                                     </ul>
                             </li>
                         </ul>
                 </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item-title" href="./men-shoes.html" target="_blank" rel="noopener noreferrer">Men</a>
-                    <div class="sub-nav-box">
+                    <a class="nav-item-title" href="./about-nike.html" target="" rel="noopener noreferrer">About Us
+                    </a>
+                    <!-- <div class="sub-nav-box">
                         <ul class="sub-nav">
                             <li class="sub-nav-item">
                                 <ul>
-                                    <a class="sub-nav-title" href="./men-shoes.html">Shoes</a>
-                                    <li><a href="./men-shoes.html">All Shoes</a></li>
+
                                 </ul>
                             </li>
                             <li class="sub-nav-item">
                                 <ul>
-                                    <a class="sub-nav-title" href="./men-clothing.html">Clothing</a>
-                                    <li><a href="./men-clothing.html">All Clothing</a></li>
-                                    <!-- <li><a href="#">Jordan</a></li>
-                                            <a class="sub-nav-title" href="#">Accessories and Equipment</a>
-                                            <li><a href="#">All Accessories and Equipment</a></li>
-                                            <li><a href="#">Bags and Backpacks</a></li>
-                                            <li><a href="#">Socks</a></li>
-                                            <li><a href="#">Hats and Headwear</a></li> -->
+                                    
                                 </ul>
                             </li>
                             <li class="sub-nav-item">
                                 <ul>
-                                    <a class="sub-nav-title" href="./men-clothing.html">Sale</a>
-                                    <li><a href="./men-shoes.html">Shoes</a></li>
-                                    <li><a href="./men-clothing.html">Clothing</a></li>
-                                    <!-- <li><a href="#">Golf</a></li>
-                                            <a class="sub-nav-title" href="#">Shop By Brand</a>
-                                            <li><a href="#">Nike Sportswear</a></li>
-                                            <li><a href="#">NikeLab</a></li>
-                                            <li><a href="#">Nike By You</a></li>
-                                            <li><a href="#">Jordan</a></li>
-                                            <li><a href="#">ACG</a></li>
-                                            <li><a href="#">NBA</a></li>
-                                            <li><a href="#">Nike SB</a></li> -->
+                                    
                                 </ul>
                             </li>
                         </ul>
-                    </div>
+                    </div>-->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item-title" href="./women-clothing.html" target="_blank" rel="noopener noreferrer">Women</a>
+                    <a class="nav-item-title" href="./women-clothing.html" target="_blank"
+                        rel="noopener noreferrer">Women</a>
                     <div class="sub-nav-box">
                         <ul class="sub-nav">
                             <li class="sub-nav-item">
