--- a/product-pages/women-shoes.html
+++ b/product-pages/women-shoes.html
@@ -1,3 +1,4 @@
+a
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,10 +32,10 @@
             <nav>
                 <div class="header-nav">
                     <div id="logo">
-                        <a href="../index.html">
-                            <svg id="logo-nike" viewBox="0 0 24 24" width="60px" height="60px">
+                        <a href="/index copy.html">
+                            <svg id="logo-nike" viewBox="0 0 20 20" width="60px" height="60px">
                                 <path
-                                    d="M21 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z">
+                                    d="M1.354 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z">
                                 </path>
                             </svg>
                         </a>
@@ -42,8 +43,7 @@
                     <nav>
                         <ul id="nav">
                             <li class="nav-item">
-                                <a class="nav-item-title" href="../index.html"
-                                    rel="noopener noreferrer">Home</a>
+                                <a class="nav-item-title" href="../index.html" rel="noopener noreferrer">Home</a>
                                 <div class="sub-nav-box">
                                     <ul class="sub-nav">
                                         <li class="sub-nav-item">
@@ -127,7 +127,8 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item-title" href="./women-clothing.html" target="_blank" rel="noopener noreferrer">Women</a>
+                    <a class="nav-item-title" href="./women-clothing.html" target="_blank"
+                        rel="noopener noreferrer">Women</a>
                     <div class="sub-nav-box">
                         <ul class="sub-nav">
                             <li class="sub-nav-item">
