--- a/feedback.html
+++ b/feedback.html
@@ -41,8 +41,7 @@
                     <nav>
                         <ul id="nav">
                             <li class="nav-item">
-                                <a class="nav-item-title" href="./index.html"
-                                    rel="noopener noreferrer">Home</a>
+                                <a class="nav-item-title" href="./index.html" rel="noopener noreferrer">Home</a>
                                 <div class="sub-nav-box">
                                     <ul class="sub-nav">
                                         <li class="sub-nav-item">
@@ -85,7 +84,8 @@
                 </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item-title" href="./product-pages/men-clothing.html" target="_blank" rel="noopener noreferrer">Men</a>
+                    <a class="nav-item-title" href="./product-pages/men-clothing.html" target="_blank"
+                        rel="noopener noreferrer">Men</a>
                     <div class="sub-nav-box">
                         <ul class="sub-nav">
                             <li class="sub-nav-item">
@@ -126,7 +126,8 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item-title" href="./product-pages/women-clothing.html" target="_blank" rel="noopener noreferrer">Women</a>
+                    <a class="nav-item-title" href="./product-pages/women-clothing.html" target="_blank"
+                        rel="noopener noreferrer">Women</a>
                     <div class="sub-nav-box">
                         <ul class="sub-nav">
                             <li class="sub-nav-item">
@@ -167,7 +168,8 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item-title" href="./product-pages/kid-clothing.html" target="_blank" rel="noopener noreferrer">Kids</a>
+                    <a class="nav-item-title" href="./product-pages/kid-clothing.html" target="_blank"
+                        rel="noopener noreferrer">Kids</a>
                     <div class="sub-nav-box">
                         <ul class="sub-nav">
                             <li class="sub-nav-item">
@@ -208,7 +210,8 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item-title" href="./product-pages/kid-clothing.html" target="_blank" rel="noopener noreferrer">Sale</a>
+                    <a class="nav-item-title" href="./product-pages/kid-clothing.html" target="_blank"
+                        rel="noopener noreferrer">Sale</a>
                     <div class="sub-nav-box">
                         <ul class="sub-nav">
                             <li class="sub-nav-item">
@@ -262,9 +265,9 @@
         <div id="main">
             <div class="form-sign-in">
                 <div class="form-header">
-                    <svg id="logo-nike" viewBox="0 0 24 24" width="60px" height="60px">
+                    <svg id="logo-nike" viewBox="0 0 20 20" width="60px" height="60px">
                         <path
-                            d="M21 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z">
+                            d="M1.354 8.719L7.836 14.303C6.74 14.768 5.818 15 5.075 15c-.836 0-1.445-.295-1.819-.884-.485-.76-.273-1.982.559-3.272.494-.754 1.122-1.446 1.734-2.108-.144.234-1.415 2.349-.025 3.345.275.2.666.298 1.147.298.386 0 .829-.063 1.316-.19L21 8.719z">
                         </path>
                     </svg>
                 </div>
